# EdgeDetectProject

./: .gitignore  README.md  build.gradle  local.properties.sample  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/edge/detect/: MainActivity.kt
app/src/main/java/com/edge/detect/gl/: GLRenderer.kt
app/src/main/res/layout/: activity_main.xml
web/: package.json  tsconfig.json
web/public/: index.html
web/src/: main.ts
